>dnl Process this file with autoconf to produce a configure script.

AC_INIT(Ngraph, 6.03.51.gtk-35, ZXB01226@nifty.com, Ngraph-gtk)

AC_CONFIG_SRCDIR(src/gtk/main.c)
AM_INIT_AUTOMAKE

AC_PROG_LIBTOOL

GTK_REQUIRED_VERSION=2.12.0
GLIB_REQUIRED_VERSION=$GTK_REQUIRED_VERSION

dnl Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL

AC_CHECK_PROG(RM, rm)
AC_CHECK_PROG(MKDIR, mkdir)
AC_CHECK_PROG(RUBY, ruby)

# Checks for libraries.
AC_CHECK_LIB([m], [sqrt])
AC_CHECK_LIB([readline], [rl_completion_matches])
AC_CHECK_LIB([pthread], [pthread_create])

AM_PATH_GLIB_2_0($GLIB_REQUIRED_VERSION,,
  [AC_MSG_ERROR(Test for GLib failed.)],
  gobject)

AM_PATH_GTK_2_0($GTK_REQUIRED_VERSION,, [AC_MSG_ERROR(Test for GTK failed.)])
AC_SUBST(PKG_CONFIG)

# Checks for header files.
AC_PATH_X
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h limits.h stdlib.h string.h strings.h sys/ioctl.h sys/time.h unistd.h utime.h pthread.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRTOD
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_FUNC_MMAP
AC_CHECK_FUNCS([sigaction sigsuspend alarm dup2 getcwd mkdir pow sqrt strchr strdup strerror strncasecmp strstr strtol utime isfinite finite])

ALL_LINGUAS="ja"
AM_GNU_GETTEXT([external])

AC_DEFUN([AC_NGRAPH_ENABLE_JAPANESE], [
AC_MSG_CHECKING(if japanese text support is enabled)
AC_ARG_ENABLE(japanese,
[  --enable-japanese	  enable japanese text support],
[enable_japanese=yes],
[enable_japanese=no])
test x"$enable_japanese" = xyes && AC_DEFINE([JAPANESE], 1, [japanese text support])
AC_MSG_RESULT($enable_japanese)])

AC_NGRAPH_ENABLE_JAPANESE


AC_DEFUN([AC_NGRAPH_ENABLE_NEW_MATH], [
AC_MSG_CHECKING(if new math code is enabled)
AC_ARG_ENABLE(new_math,
[  --enable-new_math	  enable new math code],
[enable_new_math=yes],
[enable_new_math=no])
test x"$enable_new_math" = xyes && AC_DEFINE([NEW_MATH_CODE], 1, [use new math code])
AC_MSG_RESULT($enable_new_math)])

AC_NGRAPH_ENABLE_NEW_MATH

AC_CONFIG_FILES([Makefile src/Makefile src/gtk/Makefile \
		 src/math/Makefile driver/Makefile \
		 addin/Makefile po/Makefile.in m4/Makefile \
		 demo/Makefile initfile/Makefile \
		 doc/Makefile doc/html_ja/Makefile \
		 doc/html_ja/tutorial/Makefile \
		 doc/html_ja/dialogs/Makefile \
		 doc/html_ja/img/Makefile debian/Makefile \
		 zsh/Makefile test/Makefile])

AM_CONFIG_HEADER([config.h])
AC_OUTPUT
