EXTRA_DIST = ngraph_arc.png ngraph_cross.png ngraph_filewin.png		\
	ngraph_legendpoint.png ngraph_math.png ngraph_scale.png		\
	ngraph_trimming.png ngraph_axispoint.png ngraph_datapoint.png	\
	ngraph_frame.png ngraph_legendwin.png ngraph_mergewin.png	\
	ngraph_section.png ngraph_zoom.png ngraph_axiswin.png		\
	ngraph_draw.png ngraph_gauss.png ngraph_line.png		\
	ngraph_point.png ngraph_single.png ngraph_coordwin.png		\
	ngraph_eval.png ngraph_infowin.png ngraph_mark.png		\
	ngraph_rect.png ngraph_text.png

pixmapdir = $(datadir)/pixmaps/$(PACKAGE)
pixmap_DATA = $(EXTRA_DIST)
