pixmapdir = $(datadir)/pixmaps/$(PACKAGE)
dist_pixmap_DATA = ngraph_arc.png ngraph_cross.png ngraph_filewin.png	\
	ngraph_legendpoint.png ngraph_math.png ngraph_scale.png		\
	ngraph_trimming.png ngraph_axispoint.png ngraph_datapoint.png	\
	ngraph_frame.png ngraph_legendwin.png ngraph_mergewin.png	\
	ngraph_section.png ngraph_zoom.png ngraph_axiswin.png		\
	ngraph_draw.png ngraph_gauss.png ngraph_line.png		\
	ngraph_point.png ngraph_single.png ngraph_coordwin.png		\
	ngraph_eval.png ngraph_infowin.png ngraph_mark.png		\
	ngraph_rect.png ngraph_text.png ngraph_align_b.png		\
	ngraph_align_hc.png ngraph_align_l.png ngraph_align_r.png	\
	ngraph_align_t.png ngraph_align_vc.png ngraph_undo.png		\
	ngraph_icon.png ngraph_icon64.png ngraph_axiswin48.png		\
	ngraph_coordwin48.png ngraph_filewin48.png			\
	ngraph_infowin48.png ngraph_legendwin48.png			\
	ngraph_mergewin48.png
